Final draft HTML

--- a/index.html
+++ b/index.html
@@ -3,36 +3,41 @@
   <head>
     <meta charset="utf-8">
     <title>Broadway Design</title>
-    <link rel="stylesheet" href="./resources/css/index.css" type="text/css">
+    <link rel="stylesheet" href="./resources/css/style.css" type="text/css">
   </head>
   <body>
   <!--Heading-->
+  <div class="navigation">
   <h1>Broadway Design</h1>
-  <p>Home</p>
-  <p>Process</p>
-  <p>Work</p>
-  <p>Team</p>
-  <p>Contact</p>
+  <p class="btnnav"><a href="home">Home</a></p>
+  <p class="btnnav"><a href="process">Process</a></p>
+  <p class="btnnav"><a href="work">Work</a></p>
+  <p class="btnnav"><a href="#team">Team</a></p>
+  <p class="btnnav"><a href="#contact">Contact</a></p>
+</div>
   <!--Process-->
-  <h2>Our Process</h2>
+  <h2 id="process">Our Process</h2>
+  <img src="resources/icons/identify.svg">
   <h3>Identify</h3>
   <p>We focus on the most important details.</p>
+  <img src="resources/icons/understand.svg">
   <h3>Understand</h3>
   <p>We study our projects inside and out.</p>
+  <img src="resources/icons/execute.svg">
   <h3>Execute</h3>
   <p>We put everything we have into our work.</p>
   <!--Info-->
-  <h2>Designed in New York</h2>
+  <h3 id="ny">Designed in New York</h3>
   <h3>Portfolio</h3>
   <p>Coming Soon</p>
-  <h3>Team</h3>
+  <h3 id="team">Team</h3>
   <p>We're Hiring!</p>
-  <h3>Contact</h3>
+  <h3 id="contact">Contact</h3>
   <p>Phone: (555)-555-5555</p>
   <p>E-mail: test@example.com</p>
   <p>Twitter: @test</p>
-  <h3>© Broadway 2017 Home About Work Team Contact</h3>
-
-
+  <div class="footer">
+  <p><span id="cpw">© Broadway 2017</span><a href="home"> Home </a><a href="about"> About </a> <a href="work"> Work </a><a href="#team"> Team </a><a href ="#contact"> Contact </a></p>
+  </div>
   </body>
 </html>
